--- a/src/views/VentIndex/index.html
+++ b/src/views/VentIndex/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="../bootstrap.min.css">
+    <script src="./vista.js"></script>
 
     <title>Sistema de Seguridad</title>
 </head>
@@ -30,13 +31,5 @@
     </div>
 
 </body>
-
-<script>
-    const {ipcRenderer} = require('electron');
-    const btnCerrar=document.getElementById("btnCerrar");
-    btnCerrar.onclick=function(){
-        ipcRenderer.send('proyecto:cerrar');
-    }
-</script>
 
 </html>
