Se cambio la confiracion y las ventanas ya no son resizables, tambien se le agrego la opcion de prender o apagar el envio de datos a la nube desde el index.html

--- a/src/views/VentIndex/index.html
+++ b/src/views/VentIndex/index.html
@@ -21,7 +21,15 @@
                                 <h3>SISTEMA DE SEGURIDAD</h3>
                             </div>
                             <div class="card-footer bg-light">
-                                <button id="btnCerrar" class="btn btn-dark btn-block">SALIR</button>
+                                <div class="my-3">
+                                    <img id="imgIcon" src="../../img/img-btn-on.svg" alt="Estado" height="130">
+                                </div>
+                                <div class="form-group">
+                                    <button id="btnPrender" class="btn btn-primary btn-block">PRENDER</button>
+                                </div>
+                                <div class="form-group">
+                                    <button id="btnCerrar" class="btn btn-dark btn-block">SALIR</button>
+                                </div>
                             </div>
                         </div>
                     </div>
