Mejoras en las ventanas del index y simulacion sensor, tambien se refactorizo el codigo, cambiando de modulos algunas clases y funciones en su propio modulo donde tienen mas sentido

--- a/src/views/VentIndex/index.html
+++ b/src/views/VentIndex/index.html
@@ -24,11 +24,15 @@
                                 <div class="my-3">
                                     <img id="imgIcon" src="../../img/img-btn-on.svg" alt="Estado" height="130">
                                 </div>
-                                <div class="form-group">
-                                    <button id="btnPrender" class="btn btn-primary btn-block">PRENDER</button>
-                                </div>
-                                <div class="form-group">
-                                    <button id="btnCerrar" class="btn btn-dark btn-block">SALIR</button>
+                                <div class="card mt-4">
+                                    <div class="card-body">
+                                        <div class="form-group">
+                                            <button id="btnPrender" class="btn btn-primary btn-block">PRENDER</button>
+                                        </div>
+                                        <div class="form-group m-0">
+                                            <button id="btnCerrar" class="btn btn-dark btn-block">SALIR</button>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
